--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "description": "Just a simple project made with electron JS to show Android Messages from Google in a app with notifications.",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
+    "start": "cross-env NODE_ENV=dev electron .",
     "pack": "electron-builder --dir",
     "dist": "electron-builder"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/antoineguilbert/android-messages-for-desktop.git"
+    "url": "git://github.com/antoineguilbert/android-messages-for-desktop.git"
   },
   "author": "Antoine Guilbert",
   "license": "MIT",
@@ -38,11 +38,14 @@
     ]
   },
   "devDependencies": {
-    "electron": "^2.0.3",
-    "electron-builder": "^20.17.1"
+    "cross-env": "^5.2.0",
+    "electron": "2.0.2",
+    "electron-builder": "^20.17.1",
+    "electron-log": "^2.2.16"
   },
   "dependencies": {
     "electron-context-menu": "^0.10.0",
+    "electron-updater": "^2.23.3",
     "electron-window-state": "^4.1.1",
     "i18n": "^0.8.3"
   }
